--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #505e79, #b471c5);
+    background: linear-gradient(135deg, #11357d, #134c65);
     padding: 10px;
 }
 .todo-app{
